@@ -44,10 +44,12 @@ Wilcox, R. (2012). Introduction to Robust Estimation and Hypothesis Testing (3rd
 }
 \examples{
 ## median comparison
+set.seed(123)
 fitmed <- Qanova(libido ~ dose, viagra, nboot = 200)
 fitmed
 
 ## 1st, 3rd quartile comparison
+set.seed(123)
 fitquart <- Qanova(libido ~ dose, viagra, q = c(0.25, 0.75), nboot = 200)
 fitquart
 
